[package]
name = "elf_section"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["elf", "section"]
description = "elf section"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-elf_section.git"
homepage = "https://github.com/nathanfaucett/rs-elf_section"

[dependencies.bitflags]
version = "0.6.0"
